Resource-aware executor scheduling (#11)
